--- a/src/styl/style.styl
+++ b/src/styl/style.styl
@@ -134,3 +134,25 @@ FIELDSET
 
 .count-wrapper
   margin: 0
+
+@media handheld, screen and (max-width:1024px), screen and (max-device-width:1024px)
+    .wrapper
+        width: 100%
+
+    FORM
+        padding: 0
+        margin: 0
+        background-color: transparent
+        border: none
+        box-shadow: none
+
+    INPUT
+    SELECT
+        font-size: 1.8em
+        line-height: 1.2em
+
+    INPUT[type="text"]
+    INPUT[type="password"]
+    INPUT[type="url"]
+    INPUT[type="submit"]
+        width: 100%
