--- a/src/index.jade
+++ b/src/index.jade
@@ -1,11 +1,11 @@
 doctype html
-html(lang='en')
+html(lang='en', manifest='rndy.appcache')
   head
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
     title Rndy
-    script(src='bundle.js', async='true')
-    link(rel='stylesheet', href='style.css', media='all')
+    script(src='dist/bundle.js', async='true')
+    link(rel='stylesheet', href='dist/style.css', media='all')
   body
     .output
     .wrapper
